Radarr/overlays/example/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    istio-injection: enabled
