Radarr/overlays/example/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: radarr
    labels:
        app: radarr
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    selector:
        app: radarr
    loadBalancerIP: 192.168.20.240
    ports:
    - name: "http-web"
      protocol: TCP
      targetPort: 7878
      port: 7878
